fixing alignment issue

--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ body {
 	margin-bottom: 5rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
 	max-width: 50ch;
 }
 
@@ -633,7 +633,7 @@ body {
 	}
 
 	.destination-meta {
-		--gap: 6rem;
+		--gap: min(6vw, 6rem);
 		justify-content: start;
 	}
 }
